tests/ui/async-await/partial-initialization-across-await.stderr
error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/partial-initialization-across-await.rs:13:5
   |
LL |     t.0 = 42;
   |     ^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/partial-initialization-across-await.rs:13:5
   |
LL |     let mut t: (i32, i32);
   |         ----- binding declared here but left uninitialized
LL |     t.0 = 42;
   |     ^^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/partial-initialization-across-await.rs:22:5
   |
LL |     t.0 = 42;
   |     ^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/partial-initialization-across-await.rs:22:5
   |
LL |     let mut t: T;
   |         ----- binding declared here but left uninitialized
LL |     t.0 = 42;
   |     ^^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/partial-initialization-across-await.rs:31:5
   |
LL |     t.x = 42;
   |     ^^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `t` isn't fully initialized
  --> $DIR/partial-initialization-across-await.rs:31:5
   |
LL |     let mut t: S;
   |         ----- binding declared here but left uninitialized
LL |     t.x = 42;
   |     ^^^^^^^^ `t` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0381, E0658.
For more information about an error, try `rustc --explain E0381`.
